1.3 beta 6
- Add option to check online for new versions of Aria
- Add Russian and Portuguese translations from Transifex
- Save the vertical scroll of each track
- Further improve magnetic grid
- Add "Duplicate track" feature
- Show a dialog asking user to restart Aria after changing soundfont
- Improvements to track default volume feature
- Improvements to score printing
- PRessing spacebar while recording now stops recording as intended
- Ability to print multiple views for the same track

1.3 beta 5
- Added support for selecting sound bank on OSX
- Fixed MIDI export when some notes have a volume of 0
- Spanish translation (thanks to Othyro)
- Fix double replace confirmation on OSX (Cocoa)
- Remember in saved Aria files whether unused drums were hidden
- Fix minor leak in CoreAudio player
- Use fancy cursor on OSX when pressing Shift to select more
- Fixed score editor bug that caused bogus silences to appear
- Add dotted notes to magnetic grid
- Improve 'pencil' tool with more accuracy
- Improved display of very small notes

1.3 beta 4
- Added ability to drag-duplicate notes
- Fixed accidentals in score editor working over all octaves
- Fixed incorrect ledger lines in score view and score printing
- Move playback timer to the status bar where it is less intrusive
- Fix reverting to default output when custom output port is not found
- Fixed importing drum tracks from midi (would result in a graphical glitch)
- Fixed potential crash when editing song while recording is activated
- Allow entering raw controller values
- Fixed some potential crashes that could occur if you do weird stuff while recording
- Fixed several bugs in printing
- Other minor improvements to printing

1.3 beta 3
- Added support for recording from MIDI keyboard/instrument
- Added support for multiple program changes (multiple instruments per track)
- Show note names in flats when the key is going in flats
- Allow shift-clicking in measure bar to select more measures