@@ -7,8 +7,9 @@
 - Show a dialog asking user to restart Aria after changing soundfont
 - Improvements to track default volume feature
 - Improvements to score printing
-- PRessing spacebar while recording now stops recording as intended
+- Pressing spacebar while recording now stops recording as intended
 - Ability to print multiple views for the same track
+- Add keyboard shortcuts for play/pause and record
 
 1.3 beta 5
 - Added support for selecting sound bank on OSX
